Prevent clipping of header. Fixes: #167

--- a/css/main.css
+++ b/css/main.css
@@ -94,8 +94,8 @@ header {
   font-family: "Roboto Condensed";
   font-weight: 400;
   border-bottom: 1px solid #666;
-  line-height: 0.35em;
-  padding-bottom: 10px;
+  line-height: 15px;
+  padding-bottom: 5px;
   margin-bottom: 10px;
   color: #999;
 }
